# Naviin

./: .gitignore  LICENSE  README.md  plan.md  user-stories.md
docs/: tui-developer-guide.md
naviin/: Cargo.toml
naviin/db/: create_table.sql
naviin/migration/: Cargo.toml
naviin/migration/src/: create_table.rs
naviin/src/: AppState.rs  Finance.rs  FinanceProvider.rs  Orders.rs  UserInput.rs  account.rs  backtest.md  commands.rs  import.rs  lib.rs  main.rs  storage.rs  tui.rs
naviin/src/components/: holdings.rs  input.rs  mod.rs  open_orders.rs  output.rs  watchlist.rs
naviin/src/entities/: app_state.rs  holding.rs  mod.rs  open_order.rs  prelude.rs  trade.rs  watchlist.rs
naviin/tests/: app_state_tests.rs  finance_tests.rs  integration_tests.rs  storage_tests.rs
