[package]
name = "naviin"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
chrono = "0.4.42"
rust_decimal = { version = "1.42.0", features = ["serde"] }
rust_decimal_macros = "1.40.0"
tokio = { version = "1", features = ["full"] }
yfinance-rs = "0.7.2"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "debug-print", "macros" ] }
dotenvy = "0.15.7"
crossterm = "0.29.0"
ratatui = "0.30.0"